--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "bootstrap": "^4.6.1",
+    "json": "^11.0.0",
     "rxjs": "~7.5.0",
+    "server": "^1.0.37",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
